Fixed font-size on mobile screen

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,10 @@
   font-weight: 400;
   color: #545454;
 }
+
+@media screen and (max-width: 425px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
